--- a/Information.xaml
+++ b/Information.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Twitter_Archive_Eraser.Information"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Twitter Archive Eraser" Height="303.267" Width="574.06" ResizeMode="NoResize" ShowInTaskbar="False">
+        Title="Twitter Archive Eraser" Height="308.415" Width="574.06" ResizeMode="NoResize" ShowInTaskbar="False">
     <Grid Margin="10">
         <StackPanel>
             <TextBlock FontWeight="Bold" FontSize="14" TextWrapping="Wrap">Twitter Archive Eraser stores online the following information for statistical purposes:</TextBlock>
@@ -14,8 +14,16 @@
 
             <TextBlock Margin="0 10 0 0" FontWeight="Bold">Twitter Archive Eraser CANNOT access to your password</TextBlock>
             <TextBlock Margin="0 10 0 0" FontWeight="Bold" TextWrapping="Wrap">Twitter Archive Eraser CANNOT access to your direct messages unless you explicitly grant it access if you choose to delete DMs</TextBlock>
-            <TextBlock Margin="0 10 0 0" FontWeight="Bold">Twitter Archive Eraser WILL NEVER share the above information</TextBlock>            
-            
+            <TextBlock Margin="0 10 0 0" FontWeight="Bold">Twitter Archive Eraser WILL NEVER share user identifying information except for:</TextBlock>
+            <TextBlock Margin="10 0 0 0" FontSize="10" TextWrapping="Wrap">* Top user deletes could be mentioned (username and number of deletes) on our website: (
+                <Hyperlink NavigateUri="http://www.martani.net/2015/01/twitter-archive-eraser-year-in-review.html" 
+                           RequestNavigate="Hyperlink_RequestNavigate" 
+                           Foreground="#FF4435D9" FontWeight="Bold">
+                    see here for an example
+                </Hyperlink>
+                )
+            </TextBlock>
+
             <Button Name="btnOK" HorizontalAlignment="Right" Width="64" Margin="0 10 10 0" Height="23" Click="btnOK_Click">OK</Button>
         </StackPanel>
     </Grid>
